# BotObormot

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot_env/: pyvenv.cfg
bot_env/Scripts/: activate  activate.bat
core/: extensions_loader.py
extensions/: chat_dlc.py  my_context_menu.py  picture_dlc.py
unwanted_extensions/: my_command.py  my_event.py
utils/: BingAI.py  GPT.py  Kandinsky.py  Notion.py  cook.json
